objects/adapps__OptimizerPlus_Service_Cloud_Console__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Feature_Type__c</fullName>
        <label>Feature Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Feature</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Implementation_Effort__c</fullName>
        <label>Implementation Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Implementation_Effort</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Optimizer_Report__c</fullName>
        <label>Optimizer Report</label>
        <referenceTo>adapps__Optimizer_Report__c</referenceTo>
        <relationshipLabel>Service Cloud Console</relationshipLabel>
        <relationshipName>Service_Cloud_Console</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Lightning Service Console</label>
    <nameField>
        <label>Lightning Service Console</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Service Console</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>